--- a/src/vnaerr.3
+++ b/src/vnaerr.3
@@ -157,8 +157,8 @@ ll.
 \s-2VNAERR_INTERNAL\s+2;\s-2ENOSYS\s+2
 .TE
 .PP
-The library sets \fBerrno\fP before calling \fIerror_fn\fP and also before
-returning failure from a library function.
+The library sets \fBerrno\fP before calling \fIerror_fn\fP and again
+before returning failure from a library function.
 .\"
 .\" .SH "RETURN VALUE"
 .\" .SH ERRORS
